components/pages/slides/styles.module.scss
/* ... */
.product {
  display: flex;
  flex-wrap: nowrap;
  height: 100%;

  &__logo {
    position: absolute;
    width: 175px;
    height: 75px;
    left: 70px;
    top: 45px;

    opacity: 0;
    animation-fill-mode: forwards;
    animation-delay: 0.5s;
  }

  &__left {
    flex: 0 0 60%;
    padding: 0 5%;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  &__right {
    flex: 0 0 40%;
    text-align: center;
    background: rgba(229, 229, 229, 0.5);
    padding: 0 5%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }

  &__title {
    font-weight: bolder;
    font-size: 72px;
    line-height: 94px;
    position: relative;
    margin: 20px 0;
    animation-delay: 0.9s;
  }

  &__title-logo {
    position: absolute;
    top: 6px;
    left: 0;
    width: 63px;
    height: 66px;
    animation-delay: 0.8s;
  }

  &__description {
    font-weight: bold;
    font-size: 24px;
    line-height: 31px;
    color: #8b8b8b;
    text-align: left;
    animation-delay: 1.2s;
  }

  &__roof-scheme-area {
    position: relative;
    display: flex;
    flex-wrap: nowrap;
    justify-content: space-between;
    align-items: center;
    width: 100%;
  }

  &__drone {
    position: absolute;
    top: 0;
    right: 0;
    width: 100px;
    height: 80px;

    animation-delay: 0.8s;
  }

  .list {
    font-weight: bolder;
    font-size: 24px;
    line-height: 31px;
    margin: 50px 0;
    position: relative;
    color: #c5c5c5;
    cursor: pointer;

    &::before {
      content: "";
      position: absolute;
      left: -45px;
      top: 50%;
      transform: translateY(-50%);
      width: 20px;
      height: 20px;
      border-radius: 50%;
      background: #c5c5c5;
    }

    &::after {
      content: "";
      position: absolute;
      left: -36px;
      top: 50%;
      border: 0.5px dashed;
      height: 90px;
      border-color: #c5c5c5;
    }

    &.active {
      font-size: 32px;
      line-height: 42px;
      color: #000000;

      &::before {
        left: -50px;
        background: #000000;
        width: 30px;
        height: 30px;
      }

      &::after {
        top: calc(50% + 15px);
        height: 95px;
      }
    }

    &.last {
      &::after {
        content: none;
      }
    }
  }

  model-viewer {
    width: 500px;
    height: 500px;
    margin: 0 auto;
  }
}

.overview {
  color: #fff;
  overflow-y: hidden;

  &__logo {
    position: absolute;
    width: 155px;
    height: 84px;
    left: 70px;
    top: 37px;

    opacity: 0;
    animation-fill-mode: forwards;
    animation-delay: 0.5s;
  }

  &__title {
    margin: 130px 0 0 83px;
    font-weight: bolder;
    font-size: 96px;
    line-height: 125px;
    text-align: left;

    animation-delay: 0.7s;
  }

  &__address {
    margin: 0 0 0 88px;
    font-weight: 400;
    font-size: 24px;
    line-height: 31px;
    color: #e5e5e5;

    animation-delay: 0.9s;
  }

  &__image {
    position: absolute;
    top: 150px;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: -2;
    width: 100%;
    height: 100%;
  }
}

.storm {
  color: #fff;
  background: #000000;

  &__content {
    margin: 180px 0 0;
    padding: 0 80px;
    display: flex;
    flex-wrap: nowrap;
    height: 100%;
  }

  &__logo {
    position: absolute;
    width: 155px;
    height: 84px;
    left: 70px;
    top: 37px;

    opacity: 0;
    animation-fill-mode: forwards;
    animation-delay: 0.5s;
  }

  &__title {
    margin: 0;
    font-weight: bolder;
    font-size: 96px;
    line-height: 100%;
    text-align: left;

    animation-delay: 0.7s;
  }

  &__description {
    margin: 20px 0 0 0;
    font-weight: 400;
    font-size: 24px;
    line-height: 31px;
    color: #c5c5c5;
    text-align: left;

    animation-delay: 0.9s;
  }

  &__map-area {
    position: relative;
    animation-delay: 0.9s;
  }
}

.hail-slide {
  width: 100%;
  height: 100%;
  position: relative;
}

.hail {
  color: #fff;
  background: #000000;

  &__content {
    margin: 180px 0 0;
    padding: 0 80px;
    display: flex;
    flex-wrap: nowrap;
    height: 100%;
  }

  &__logo {
    position: absolute;
    width: 155px;
    height: 84px;
    left: 70px;
    top: 37px;

    opacity: 0;
    animation-fill-mode: forwards;
    animation-delay: 0.5s;
  }

  &__title {
    margin: 0;
    font-weight: bolder;
    font-size: 92px;
    line-height: 100%;
    text-align: left;

    animation-delay: 0.7s;
  }

  &__description {
    margin: 20px 0 0 0;
    font-weight: 400;
    font-size: 24px;
    line-height: 31px;
    color: #c5c5c5;
    text-align: left;

    animation-delay: 0.9s;
  }

  &__map-area {
    position: relative;
    padding: 20px 10px;
    animation-delay: 0.9s;
    height: 550px;
  }
}

.roof {
  color: #fff;
  background: rgb(221, 221, 221);

  model-viewer {
    width: 400px;
    height: 400px;
  }
}
/* ... */

